# GoIT_PyWeb_HW_2

./: Dockerfile  Pipfile  README.md  assistant.py  classes.py  commands.py  decorator.py  notes.py  notes_decorator.py  operations.py  parse_utils.py  pyproject.toml  sort_files.py
UML/: GoIT_HW_P1.drawio
