[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Personal assistant GoIT_Web_HW_2"
authors = ["Fyodor Shevchenko <fyodor.shevchenko@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
